--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,3 +1,17 @@
-img {
-  width: 100px;
+.movie-card-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.movie-card {
+  border: 1px solid white;
+  height: 380px;
+  width: 280px;
+  margin-top: 30px;
+}
+
+.movie-card img {
+  width: 100%;
+  height: 100%;
 }
