--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,7 +1,8 @@
 .movie-card-container {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  gap: 10px;
+  justify-content: left;
 }
 
 .movie-card {
