--- a/src/css/card.css
+++ b/src/css/card.css
@@ -30,8 +30,15 @@
   opacity: 0;
 }
 
-.fav-icon:hover {
-  color: red;
+.remove-icon {
+  width: 30px;
+  height: 30px;
+  background-color: palevioletred;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 1.2rem;
 }
 
 .movie-detail {
