--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,8 +1,12 @@
+:root {
+  --primary-color: #6AC045;
+}
+
 .movie-card-container {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  justify-content: left;
+  justify-content: space-around;
 }
 
 .movie-card {
@@ -33,7 +37,7 @@
 .remove-icon {
   width: 30px;
   height: 30px;
-  background-color: palevioletred;
+  background-color: var(--primary-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,7 +69,7 @@
 }
 
 .movie-detail h4 {
-  color: palevioletred;
+  color: var(--primary-color);
 }
 
 .movie-card:hover {
@@ -81,9 +85,15 @@
 button {
   border: none;
   padding: 4px 6px;
-  background-color: palevioletred;
-  color: white;
+  background-color: var(--primary-color);
   font-weight: bold;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1360px) {
+  .movie-card-container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
