--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ body {
 }
 
 .container {
-  max-width: 1460px;
+  max-width: 1480px;
   margin: 0 auto;
+  padding: 20px;
+}
+
+@media screen and (max-width: 1360px) {
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
