Fixed Fav-Icon position

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -29,20 +29,24 @@
   position: absolute;
   font-size: 2rem;
   right: 10px;
-  top: 10px;
+  bottom: 10px;
   cursor: pointer;
   opacity: 0;
+  color: #e2e2e2;
+  z-index: 1;
+  transition: 0.3s ease-in-out;
 }
 
 .remove-icon {
   width: 30px;
   height: 30px;
-  background-color: var(--primary-color);
+  background-color: palevioletred;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   font-size: 1.2rem;
+  top: 10px;
 }
 
 .movie-detail {
