--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -8,6 +8,7 @@
   align-items: center;
   height: 80px;
   gap: 10%;
+  position: relative;
 }
 
 .nav-list {
@@ -67,4 +68,68 @@
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.search-box {
+  display: none;
+}
+
+.menu-box {
+  display: none;
+}
+
+.menu-box i:hover {
+  cursor: pointer;
+  color: var(--primary-color);
+}
+
+@media screen and (max-width: 610px) {
+
+  .menu-box {
+    display: block;
+    font-size: 2rem;
+    display: flex;
+    gap: 30px;
+  }
+
+  .nav-list {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .search-container {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    display: none;
+    z-index: 2;
+  }
+
+  .search-box {
+    display: block;
+    font-size: 1.6rem;
+  }
+
+  .logo-container {
+    flex: 2;
+    text-align: center;
+    font-size: 1.2rem;
+  }
+
+  .nav-list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    z-index: 3;
+    width: 100%;
+    text-align: center;
+    background-color: #1F1F1F;
+  }
+
+  .nav-list li {
+    border: 1px solid white;
+    padding: 20px;
+    margin: 10px;
+  }
 }
