--- a/src/css/card.css
+++ b/src/css/card.css
@@ -86,6 +86,10 @@
   opacity: 1;
 }
 
+.fav-error {
+  font-size: 2rem;
+}
+
 button {
   border: none;
   padding: 4px 6px;
@@ -100,4 +104,26 @@ button {
     max-width: 1200px;
     margin: 0 auto;
   }
+}
+
+@media screen and (max-width: 610px) {
+  .movie-card-container {
+    margin-top: 20px;
+  }
+
+  .movie-card {
+    width: 320px;
+    height: 420px;
+  }
+
+  .movie-card:hover {
+    transform: scale(1);
+    z-index: 1;
+  }
+
+  .fav-error {
+    margin-top: 20%;
+    font-size: 2rem;
+  }
+
 }
